[Add] Added informations on how to use
Added link to CORS extension

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Hello this is a ping tester</h1>
+  <h2>You need <a href="https://chrome.google.com/webstore/detail/allow-control-allow-origi/nlfbmbojpeacfghkpbjhddihlkkiljbi" target="_blank">CORS extension</a> for chrome to use this tester ATM.</h2>
   <span class="ping"></span><br  />
   <span class="ping_calculated"></span>
 </body>
