[Add] Added coloration based on ping
Added panel of color based on how high ping is

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <head>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="text/javascript" src="./script.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
-<body>
+<body id="result">
   <h1>Hello this is a ping tester</h1>
   <h2>You need <a href="https://chrome.google.com/webstore/detail/allow-control-allow-origi/nlfbmbojpeacfghkpbjhddihlkkiljbi" target="_blank">CORS extension</a> for chrome to use this tester ATM.</h2>
-  <span class="ping"></span><br  />
-  <span class="ping_calculated"></span>
+  <span id="ping"></span>
+  <br  />
+  <span id="ping_calculated"></span>
+
 </body>
 </html>
